# BAAS_External_Tools

./: CMakeLists.txt
include/: detecter.h  ocr.h  ocr_engine.h  onnx_session.h  ppocr.h  recognizer.h
resources/paddle_inference/: CMakeCache.txt  version.txt
resources/paddle_inference/paddle/include/: paddle_analysis_config.h  paddle_api.h  paddle_inference_api.h  paddle_mkldnn_quantizer_config.h  paddle_pass_builder.h  paddle_tensor.h
resources/paddle_inference/paddle/include/experimental/: ext_all.h  ext_dispatch.h  ext_dtype.h  ext_op_meta_info.h  ext_tensor.h
resources/paddle_inference/paddle/include/internal/: framework.pb.h
resources/paddle_inference/paddle/lib/: paddle_inference.exp
src/: bindings.cpp  detector.cpp  ocr.cpp  onnx_session.cpp  ppocr.cpp  recognizer.cpp
tests/: CMakeLists.txt  main.cpp
